--- a/src/lib/package.json
+++ b/src/lib/package.json
@@ -10,8 +10,8 @@
     "type": "git",
     "url": ""
   },
-  "author": "Steve Brownlee <steve@stevebrownlee.com>",
-  "license": "MIT",
+  "author": "",
+  "license": "",
   "bugs": {
     "url": ""
   },
@@ -23,6 +23,7 @@
     "grunt-contrib-uglify-es": "git://github.com/gruntjs/grunt-contrib-uglify.git#harmony",
     "grunt-contrib-watch": "^1.0.0",
     "grunt-eslint": "^20.1.0",
+    "jquery": "^3.3.1",
     "uglify-es": "^3.3.9"
   }
 }
